# claude-code-bridge

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  permissions.example.json  permissions.js  pyproject.toml  server.js  server.py  setup.sh  start.sh
