[project]
name = "claude-code-bridge"
version = "0.1.0"
description = "MCP server that bridges Claude.ai to your local Claude Code CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cosmin Iancu"}
]
requires-python = ">=3.10"
keywords = ["claude", "mcp", "anthropic", "ai", "cli", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.14.0",
    "mcp>=1.1.2",
]

[project.urls]
Homepage = "https://github.com/talpah/claude-code-bridge"
Repository = "https://github.com/talpah/claude-code-bridge"
Issues = "https://github.com/talpah/claude-code-bridge/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
